Enhance query and header handling in `/api/parrot` endpoint
- Extend support for optional query parameters and headers in `RequestParrot` definition.
- Update serialization/deserialization logic in Kotlin and Java to handle optional fields.
- Adjust header casing logic to improve compliance with RFC 7230.
- Refactor integration tests with WebTestClient for header and query validation.
- Add logging to Wirespec configuration classes for better debugging.
- Bump dependency versions and introduce WireMock for testing.